<resources>
    <string name="app_name">SoloLifeApp</string>

    <string name="login_name">로그인</string>
    <string name="sign_name">회원가입</string>
    <string name="no_sign_name">비회원 가입</string>
    <string name="logout_name">로그아웃</string>

    <string name="email_hint">이메일</string>
    <string name="pwd_hint">비밀번호</string>
    <string name="pwdCheck_hint">비밀번호 재확인</string>

    <string name="start_login">로그인 하기</string>
    <string name="start_join">회원가입 하기</string>

    <string name="category_title">카테고리 영역</string>

    <string name="write_page">글쓰기 페이지</string>
    <string name="write_title">제목을 입력해주세요.</string>
    <string name="write_content">내용을 입력해주세요.</string>
    <string name="write_btn">작성하기</string>

    <string name="dialog_modify">수정</string>
    <string name="dialog_delete">삭제</string>

    <string name="write_modify">수정 페이지</string>
    
    <string name="write_comment">댓글을 작성해주세요.</string>

    <string name="category_all">전체</string>
    <string name="category_food">음식</string>
    <string name="category_economy">절약</string>
    <string name="category_else">기타</string>
    <string name="category_hobby">취미</string>
    <string name="category_interior">가구</string>
    <string name="category_life">생활</string>
    <string name="category_oneRoom">원룸</string>

</resources>