<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".auth.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:background="@color/main_color">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_name"
                    style="@style/AuthTextView"/>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/emailArea"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                style="@style/AuthEditText"/>

            <View style="@style/Divider"/>


            <EditText
                android:id="@+id/passwordArea"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                style="@style/AuthEditText"/>

            <View style="@style/Divider"/>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/start_login"
                style="@style/ButtonRadius"/>



        </LinearLayout>

    </LinearLayout>
</layout>