<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.IntroActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="fitXY"
                android:src="@drawable/loginbg" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:src="@drawable/upperbg"
                android:scaleType="fitXY"
                android:layout_alignParentBottom="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/ButtonStyle"
                    android:text="@string/login_name"/>

                <Button
                    android:id="@+id/joinBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/ButtonStyle"
                    android:text="@string/sign_name"/>

                <Button
                    android:id="@+id/noAccountBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/ButtonStyle"
                    android:text="@string/no_sign_name"/>

            </LinearLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>