<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.TipFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="70dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/category1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_all"/>

                    <ImageView
                        android:id="@+id/category2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_cook"/>

                    <ImageView
                        android:id="@+id/category3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_economy"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_all"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_food"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_economy"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/category4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_oneroom"/>

                    <ImageView
                        android:id="@+id/category5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_hobby"/>

                    <ImageView
                        android:id="@+id/category6"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_interior"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_oneRoom"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_hobby"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_interior"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/category7"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_life"/>

                    <ImageView
                        android:id="@+id/category8"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/main_icon_else"/>

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_life"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CategoryTextView"
                        android:text="@string/category_else"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        style="@style/CategoryTextView"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/main_color"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:weightSum="5"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView android:id="@+id/homeTap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/bottom_hometap" />

                <ImageView android:id="@+id/tipTap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/bottom_goodtip" />
                <ImageView android:id="@+id/talkTap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/bottom_talk" />
                <ImageView
                    android:id="@+id/bookmarkTap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/bottom_bookmark" />
                <ImageView android:id="@+id/storeTap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/bottom_store" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>